uso del boton calcular

--- a/actividad_3/ejercicio8_2/src/main/java/com/mycompany/ejercicio8_2/VentanaPrincipal.form
+++ b/actividad_3/ejercicio8_2/src/main/java/com/mycompany/ejercicio8_2/VentanaPrincipal.form
@@ -153,6 +153,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Calcular"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boton_calcularActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="boton_limpiar">
       <Properties>
