--- a/actividad_3/ejercicio8_2/src/main/java/com/mycompany/ejercicio8_2/VentanaPrincipal.form
+++ b/actividad_3/ejercicio8_2/src/main/java/com/mycompany/ejercicio8_2/VentanaPrincipal.form
@@ -161,6 +161,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Limpiar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boton_limpiarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="label_promedio">
       <Properties>
