--- a/actividad_3/ejercicio8_3/src/main/java/com/mycompany/ejercicio8_3/VentanaPrincipal.form
+++ b/actividad_3/ejercicio8_3/src/main/java/com/mycompany/ejercicio8_3/VentanaPrincipal.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Figuras"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -23,13 +24,46 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+              <Component id="boton_cilindro" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="boton_esfera" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="boton_piramide" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="34" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="boton_cilindro" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="boton_esfera" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="boton_piramide" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="23" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JButton" name="boton_esfera">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Esfera"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="boton_cilindro">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cilindro"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="boton_piramide">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Pir&#xe1;mide"/>
+      </Properties>
+    </Component>
+  </SubComponents>
 </Form>
