--- a/actividad_3/ejercicio8_3/src/main/java/com/mycompany/ejercicio8_3/VentanaPiramide.form
+++ b/actividad_3/ejercicio8_3/src/main/java/com/mycompany/ejercicio8_3/VentanaPiramide.form
@@ -105,6 +105,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Calcular"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boton_calcularActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="label_volumen">
       <Properties>
