--- a/actividad_6/Ejercicio_8_4/src/main/java/com/mycompany/ejercicio_8_4/VentanaAgregarEmpleado.form
+++ b/actividad_6/Ejercicio_8_4/src/main/java/com/mycompany/ejercicio_8_4/VentanaAgregarEmpleado.form
@@ -65,7 +65,7 @@
               <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
               <Component id="boton_agregar" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="boton_borrar" min="-2" max="-2" attributes="0"/>
+              <Component id="boton_limpiar" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -123,7 +123,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="boton_agregar" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boton_borrar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="boton_limpiar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="17" max="32767" attributes="0"/>
           </Group>
@@ -224,9 +224,9 @@
         <Property name="text" type="java.lang.String" value="Agregar"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="boton_borrar">
+    <Component class="javax.swing.JButton" name="boton_limpiar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Borrar"/>
+        <Property name="text" type="java.lang.String" value="Limpiar"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JSpinner" name="spinner_diasLaborados">
