--- a/actividad_6/Ejercicio_8_4/src/main/java/com/mycompany/ejercicio_8_4/VentanaAgregarEmpleado.form
+++ b/actividad_6/Ejercicio_8_4/src/main/java/com/mycompany/ejercicio_8_4/VentanaAgregarEmpleado.form
@@ -228,6 +228,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Limpiar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boton_limpiarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JSpinner" name="spinner_diasLaborados">
     </Component>
